--- a/spa.css
+++ b/spa.css
@@ -9,7 +9,7 @@ header, nav, main, footer { display: block; }
 
 
 body {
-    background-color: #a31ea2;
+    background-color: #aa8baa;
     color: #3F2860;
         font-family: Veranda, Arial, sans-serif;
 } 
